--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -2,9 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   @apply bg-gray-100;
+  text-align: center;
+  font-size: 12pt;
+  line-height: 2;
+}
+
+button {
+  border-radius: 4pt;
+  border-color: green;
 }
 
 .container {
