Интеграция 1С в приложение: получение списка телефонов в наличии с настраиваемым интервалом (установлено обновление в 1 сутки) и добавление контрагентов покупателей в базу 1С. Переработаны структуры хранения списка телефонов и функции с их взаимодействием. Удаление таблицы телефонов из БД pgsql. Изменение структуры UserDto

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -14,11 +14,7 @@ body {
   text-align: center;
   font-size: 12pt;
   line-height: 2;
-}
-
-button {
-  border-radius: 4pt;
-  border-color: green;
+  background-color: white;
 }
 
 .container {
