--- a/frontend/src/styles/[code].module.css
+++ b/frontend/src/styles/[code].module.css
@@ -9,12 +9,10 @@
     justify-content: center;
     align-items: center;
     min-height: 90vh;
-    background-color: white;
 }
 
 .card {
     width: 100%;
-    background-color: white;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 2rem;
@@ -86,7 +84,7 @@
     border-radius: 0.375rem;
     border: 1px solid #e5e7eb;
     color: #111827;
-    background-color: #f9fafb;
+    background-color: #f4f4f4;
 }
 
 .formLabel {
